ensure prev/next links dont overlap

--- a/stylus/pages/_docs.styl
+++ b/stylus/pages/_docs.styl
@@ -60,18 +60,13 @@ $EmbedObject
         text-bg-color-border-radius($color3)
 
     .prev-next
-      position relative
+      display flex
+      flex-flow row wrap
+      justify-content space-between
+      align-items center
       margin-top 4em
       font-size 75%
       width 100%
-      .prev
-        position absolute
-        left 0px
-        top 0px
-      .next
-        position absolute
-        right 0px
-        top 0px
 
 
   aside
